--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.45.0",
     "@uploadthing/react": "^6.6.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
@@ -35,6 +36,7 @@
     "react-dom-confetti": "^0.2.0",
     "react-dropzone": "^14.2.3",
     "react-rnd": "^10.4.11",
+    "shadcn-ui": "^0.8.0",
     "sharp": "^0.32.6",
     "stripe": "^15.10.0",
     "tailwind-merge": "^2.3.0",
